--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,9 @@
 name: shop_sphere
 description: "E-commerce flutter application"
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
-
+version: 1.0.0
 environment:
   sdk: ^3.6.1
-
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -43,12 +20,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -59,28 +33,60 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  fonts:
+     - family: DM-sans
+       fonts:
+         - asset: assets/fonts/dm-sans/DMSans-Thin.ttf
+           weight: 100
+           style: normal
+         - asset: assets/fonts/dm-sans/DMSans-ThinItalic.ttf
+           weight: 100
+           style: italic
+         - asset: assets/fonts/dm-sans/DMSans-ExtraLight.ttf
+           weight: 200
+           style: normal
+         - asset: assets/fonts/dm-sans/DMSans-ExtraLightItalic.ttf
+           weight: 200
+           style: italic
+         - asset: assets/fonts/dm-sans/DMSans-Light.ttf
+           weight: 300
+           style: normal
+         - asset: assets/fonts/dm-sans/DMSans-LightItalic.ttf
+           weight: 300
+           style: italic
+         - asset: assets/fonts/dm-sans/DMSans-Regular.ttf
+           weight: 400
+           style: normal
+         - asset: assets/fonts/dm-sans/DMSans-Italic.ttf
+           weight: 400
+           style: italic
+         - asset: assets/fonts/dm-sans/DMSans-Medium.ttf
+           weight: 500
+           style: normal
+         - asset: assets/fonts/dm-sans/DMSans-MediumItalic.ttf
+           weight: 500
+           style: italic
+         - asset: assets/fonts/dm-sans/DMSans-SemiBold.ttf
+           weight: 600
+           style: normal
+         - asset: assets/fonts/dm-sans/DMSans-SemiBoldItalic.ttf
+           weight: 600
+           style: italic
+         - asset: assets/fonts/dm-sans/DMSans-Bold.ttf
+           weight: 700
+           style: normal
+         - asset: assets/fonts/dm-sans/DMSans-BoldItalic.ttf
+           weight: 700
+           style: italic
+         - asset: assets/fonts/dm-sans/DMSans-ExtraBold.ttf
+           weight: 800
+           style: normal
+         - asset: assets/fonts/dm-sans/DMSans-ExtraBoldItalic.ttf
+           weight: 800
+           style: italic
+         - asset: assets/fonts/dm-sans/DMSans-Black.ttf
+           weight: 900
+           style: normal
+         - asset: assets/fonts/dm-sans/DMSans-BlackItalic.ttf
+           weight: 900
+           style: italic
