--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,34 +5,33 @@ version: 1.0.0
 environment:
   sdk: ^3.6.1
 dependencies:
+  flutter_localizations:
+    sdk: flutter
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Contains code to deal with internationalized/localized messages, date and number formatting.
+  intl: ^0.19.0
+  # A declarative router for Flutter based on Navigation 2.
+  go_router: ^14.7.1
+  # Default icons asset for Cupertino widgets.
   cupertino_icons: ^1.0.8
-
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  # A build system for Dart code generation and modular compilation.
+  build_runner: ^2.4.14
+  # Recommended lints for Flutter apps.
   flutter_lints: ^5.0.0
-
-
+  # A builder that supports generated strongly-typed route helpers for package:go_router.
+  go_router_builder: ^2.7.3
 flutter:
   generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   fonts:
      - family: NavigationBarIcon
        fonts:
