--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,11 @@ dev_dependencies:
   flutter_native_splash: ^2.4.4
 flutter:
   generate: true
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
   assets:
      - assets/images/
+     - assets/images/splash_images/
+     - assets/images/onboarding_images/
   fonts:
      - family: NavigationBarIcon
        fonts:
